# PI2-minimips

./: CMakeLists.txt  README.md
src/: Carregar e decodificar.c  back.c  back.h  clock.c  clock.h  colors.h  control.c  control.h  converterbin.c  data.c  data.h  debugger.c  debugger.h  encoding.c  encoding.h  instruction.c  instruction.h  load_instruction_mem.c  main.c  main.h  menu principal.c  menu.c  reset.c  reset.h  salvar memoria.c  terminal.h  types.h  ula.c  ula.h  utils.c  utils.h  view.c  view.h
static/memorias_instrucoes/: logic.mem  memoria2.mem  overflow.mem  programa_k_vezes_n.mem
